Fix: Visible calendar items when selected

--- a/src/routes/Calendar/List/Item/Item.less
+++ b/src/routes/Calendar/List/Item/Item.less
@@ -7,8 +7,6 @@
     flex-direction: column;
     background-color: var(--overlay-color);
     border-radius: var(--border-radius);
-    border: 0.15rem solid transparent;
-    transition: border-color 0.1s ease-out;
 
     .heading {
         flex: none;
@@ -82,6 +80,19 @@
         }
     }
 
+    &::before {
+        border: 0.15rem solid transparent;
+        border-radius: var(--border-radius);
+        box-sizing: border-box;
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        pointer-events: none;
+        z-index: 1;
+        transition: border-color 0.1s ease-out;
+    }
+
     &.today {
         .heading {
             background-color: var(--primary-accent-color);
@@ -89,7 +100,9 @@
     }
 
     &.active {
-        border-color: var(--primary-foreground-color);
+        &::before {
+            border-color: var(--primary-foreground-color);
+        }
     }
 
     &:not(.active):hover {
